# Grafito-Open

./: .gitattributes  .gitignore  ANDROID.md  CHANGELOG.md  Cargo.lock.backup  Cargo.toml  LICENSE  PLAN-HERRAMIENTAS.md  README.en.md  README.md  extract.py  scratch.rs  scratch2.rs  scratch3.rs  scratch4.rs  scratch5.rs  test_eval.rs  test_implicit.rs  test_solve.rs  update_ast.py  update_preprocess.py
.cargo/: config.toml
.commandcode/taste/: taste.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/workflows/: build-windows.yml  ci.yml  codeql.yml  dependency-review.yml  release.yml
.megamemory/: knowledge.db  knowledge.db-shm  knowledge.db-wal
android/: IMPLEMENTATION_STATUS.md  README.md  SUMMARY.md  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/ai/grafito/app/: GrafitoApplication.kt  MainActivity.kt
android/app/src/main/java/ai/grafito/app/bridge/: CanvasSurfaceView.kt  UniFFIBridge.kt
android/app/src/main/java/ai/grafito/app/di/: AppModule.kt
android/app/src/main/java/ai/grafito/app/ui/algebra/: AlgebraPanel.kt
android/app/src/main/java/ai/grafito/app/ui/canvas/: GrafitoCanvas.kt
android/app/src/main/java/ai/grafito/app/ui/commandpalette/: CommandPaletteDialog.kt
android/app/src/main/java/ai/grafito/app/ui/components/: ColorPickerDialog.kt  GrafitoSnackbar.kt
android/app/src/main/java/ai/grafito/app/ui/mathkeyboard/: AlphaTab.kt  FunctionTab.kt  MathKeyboard.kt  NumericTab.kt  ThreeDTab.kt
android/app/src/main/java/ai/grafito/app/viewmodel/: DocumentUiState.kt  GrafitoViewModel.kt
android/app/src/main/java/uniffi/grafito_ffi/: grafito_ffi.kt
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml  styles.xml
crates/: debug_cam.rs  refactor.py  test_attractor.rs
crates/grafito-app/: Cargo.toml
crates/grafito-app/examples/: bench_implicit_curve.rs  test_commands.rs
crates/grafito-app/src/: algebra.rs  android.rs  app.rs  canvas.rs  commands.rs  export.rs  gpu_canvas.rs  input.rs  keyboard.rs  lib.rs  main.rs  panels.rs  render_2d.rs  render_3d.rs  snap.rs  tests.rs  tool_dispatcher.rs  tools_panel.rs  ui.rs  utils.rs
crates/grafito-app/tests/: app_smoke.rs  complex_mapping_fill_test.rs  fill_cache_test.rs  render_2d_fill_test.rs
crates/grafito-command/: Cargo.toml
crates/grafito-command/src/: commands.rs  lib.rs
crates/grafito-command/tests/: analysis_commands.rs  analytic_geometry_3d.rs  command_outcome.rs  complex_mapping.rs  complex_mapping_render.rs  edge_cases.rs  full_lt_gt_test.rs  implicit_curve_comprehensive.rs  lt_gt_test.rs  unicode_input_test.rs  user_scenario.rs  utn_linear_algebra_commands.rs
crates/grafito-complex/: Cargo.toml
crates/grafito-complex/src/math/: algebraic_mappings.rs  complex_calculus.rs  complex_expr.rs  complex_opcode.rs  mod.rs
crates/grafito-core/: Cargo.toml
crates/grafito-core/benches/: document_scenarios.rs  solver_bench.rs
crates/grafito-core/src/: analyzable.rs  constraints.rs  document.rs  function_sampling.rs  id.rs  implicit_curve.rs  lib.rs  macros.rs  numeric_constraints.rs  numeric_constraints_tests.rs  numeric_solver.rs  object.rs  parametric_sampling.rs  pencil.rs  spatial.rs  tests.rs  validation.rs  vector_field_sampling.rs
crates/grafito-core/tests/: document_integration.rs  empty_expr_test.rs  eq_render_stress.rs  implicit_curve_cache_invalidation.rs  implicit_curve_critical.rs  implicit_curve_fill_cache.rs  implicit_curve_outline.rs  implicit_curve_render_flow.rs  marching_squares_check.rs
crates/grafito-ffi/: Cargo.toml
crates/grafito-ffi/src/: bridge.rs  canvas.rs  command_processor.rs  converters.rs  dto.rs  jni.rs  lib.rs  persist.rs
crates/grafito-geometry/: Cargo.toml
crates/grafito-geometry/benches/: expr_bench.rs
crates/grafito-geometry/examples/: test_abs.rs  test_batch2.rs  test_evalexpr.rs  test_implicit.rs  test_neg.rs  test_perf.rs  test_power.rs  test_render.rs  test_symbolic.rs
crates/grafito-geometry/src/: analysis.rs  ast.rs  attractors.rs  boolean.rs  cas.rs  complex_expr.rs  dd.rs  eval_test.rs  eval_test2.rs  eval_test3.rs  expr.rs  fractals.rs  integral.rs  intersections.rs  interval.rs  lib.rs  lines.rs  matrices.rs  ode.rs  planes3d.rs  precision.rs  special_curves.rs  special_functions.rs  statistics.rs  symbolic.rs  tests.rs  types.rs  types3d.rs  value.rs
crates/grafito-geometry/src/conformal/: algebraic_mappings.rs  mod.rs
crates/grafito-geometry/tests/: eq_outline_bug.rs  eval_y2_test.rs  lt_fill_alpha_test.rs  lt_render_test.rs  lt_visible_test.rs  parse_critical.rs  scanline_correctness.rs  scanline_full.rs  scanline_speed.rs  scanline_stride.rs  scanline_thin.rs  scanline_thin2.rs  scanline_v2.rs  screen_to_world_x_test.rs  screen_to_world_y_test.rs  speed_test.rs  stride_correctness.rs  test_new.rs  view_transform_test.rs  y2_test.rs  y_squared_support.rs  zoom_out_bug.rs
crates/grafito-render/: Cargo.toml
crates/grafito-render/benches/: geometry_bench.rs  render_scenarios.rs
crates/grafito-render/src/: complex_compute.rs  complex_compute.wgsl  domain_coloring_compute.rs  domain_coloring_compute.wgsl  fill_compute.rs  fill_compute.wgsl  function_compute.rs  function_compute.wgsl  implicit_compute.rs  implicit_compute.wgsl  lib.rs  parametric_compute.rs  parametric_compute.wgsl  shader.wgsl  tests.rs  vector_compute.rs  vector_compute.wgsl
crates/grafito-render/tests/: headless_render.rs
crates/grafito-ui/: Cargo.toml
crates/grafito-ui/src/: animation.rs  color_picker.rs  command_palette.rs  icons.rs  keyboard.rs  lib.rs  theme.rs  toast.rs  tokens.rs  toolbar.rs
crates/grafito-ui/tests/: ui_tests.rs
docs/: Plans.md  commands.md  plan-android-ui.md  plan-fix-critical-bugs.md
packaging/: README.md  build-deb.sh  build-exe.sh
packaging/debian/: control  copyright  grafito.desktop  install  postinst  prerm
scripts/: build-android.sh  install-android.sh  setup-android-env.sh
src/: lib.rs
tests/: release_smoke.rs
(+6 files in other folders)
