[package]
name = "grafito-release-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Smoke tests at the workspace level for Grafito Open"

[workspace]
members = ["crates/grafito-app", "crates/grafito-command", "crates/grafito-core", "crates/grafito-geometry", "crates/grafito-render", "crates/grafito-ui"]
resolver = "2"

[workspace.package]
version = "1.1.3-open.0"
edition = "2021"
authors = ["Grafito Contributors <https://github.com/Diez111/Grafito-Open>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Diez111/Grafito-Open"
rust-version = "1.78"

[workspace.dependencies]
# Core
grafito-core = { path = "crates/grafito-core" }
grafito-command = { path = "crates/grafito-command" }
grafito-geometry = { path = "crates/grafito-geometry" }
grafito-render = { path = "crates/grafito-render" }
grafito-ui = { path = "crates/grafito-ui" }

# Window & GPU
eframe = "0.29"
wgpu = "22.0"
pollster = "0.3"
raw-window-handle = "0.6"

# UI
egui = "0.29"

# Math & Geometry
glam = { version = "0.29", features = ["serde"] }
nalgebra = "0.33"
geo = "0.29"
geo-types = "0.7"
spade = "2.10"
robust = "1.1"

# Rendering
lyon = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }

# Parsing & Expressions
evalexpr = "11.3"
num-complex = "0.4"

# Parallelism
rayon = "1.10"

# Spatial indexing
rstar = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
rfd = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 1
