[package]
name = "grafito-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "grafito"
path = "src/main.rs"

[dependencies]
grafito-core.workspace = true
grafito-geometry.workspace = true
grafito-ui.workspace = true
grafito-render.workspace = true

eframe = { workspace = true, features = ["wgpu"] }
pollster.workspace = true

egui.workspace = true
egui-wgpu = "0.29"
wgpu.workspace = true
bytemuck.workspace = true

glam.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
rfd.workspace = true
image.workspace = true
serde_json.workspace = true
rayon.workspace = true
num-complex.workspace = true
