[package]
name = "grafito-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "grafito"
path = "src/main.rs"

[lib]
name = "grafito_app"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
grafito-core.workspace = true
grafito-geometry.workspace = true
grafito-command.workspace = true
grafito-ui.workspace = true
grafito-render.workspace = true

eframe = { workspace = true, features = ["wgpu"] }
pollster.workspace = true

egui.workspace = true
egui-wgpu = "0.29"
wgpu.workspace = true
bytemuck.workspace = true

glam.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
image.workspace = true
serde_json.workspace = true
serde.workspace = true
rayon.workspace = true
num-complex.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30", features = ["android-native-activity"] }
android-activity = { version = "0.6", features = ["native-activity"] }
android_logger = "0.13"
jni = "0.21"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd.workspace = true
