[package]
name = "grafito-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "grafito"
path = "src/main.rs"

[lib]
name = "grafito_app"
path = "src/lib.rs"

[dependencies]
grafito-core.workspace = true
grafito-geometry.workspace = true
grafito-command.workspace = true
grafito-ui.workspace = true
grafito-render.workspace = true
grafito-complex = { path = "../grafito-complex" }

eframe = { workspace = true, features = ["wgpu"] }
pollster.workspace = true

egui.workspace = true
egui-wgpu = "0.34"
wgpu.workspace = true
bytemuck.workspace = true

glam.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
image.workspace = true
serde_json.workspace = true
serde.workspace = true
rayon.workspace = true
num-complex.workspace = true
rfd.workspace = true

puffin = { version = "0.19", optional = true }
puffin_http = { version = "0.16", optional = true }

[features]
profile = ["puffin", "puffin_http"]
