[package]
name = "grafito-complex"
version = "1.1.9-beta"
edition = "2021"
description = "Mathematical engine for complex variables and conformal mappings in Grafito."

[dependencies]
glam = "0.24"
serde = { version = "1.0", features = ["derive"] }
grafito-geometry = { path = "../grafito-geometry" }
num-complex = "0.4.3"
