[package]
name = "grafito-complex"
version = "1.2.0-beta"
edition = "2021"
description = "Mathematical engine for complex variables and conformal mappings in Grafito."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
grafito-geometry = { path = "../grafito-geometry" }
num-complex.workspace = true
