[package]
name = "grafito-geometry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
glam.workspace = true
nalgebra.workspace = true
geo.workspace = true
geo-types.workspace = true
spade.workspace = true
robust.workspace = true
evalexpr.workspace = true
serde.workspace = true
log.workspace = true
rug.workspace = true
num-complex.workspace = true
rayon.workspace = true
