[package]
name = "grafito-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
grafito-core.workspace = true
grafito-geometry.workspace = true
grafito-complex = { path = "../grafito-complex" }

wgpu.workspace = true
glam.workspace = true
lyon.workspace = true
bytemuck.workspace = true
log.workspace = true
anyhow.workspace = true
rayon.workspace = true
num-complex.workspace = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
pollster.workspace = true
wgpu.workspace = true

[[bench]]
name = "geometry_bench"
harness = false

[[bench]]
name = "render_scenarios"
harness = false
